# muscle-ai

./: .env  .gitignore  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pylint.yml  run-traning.yml
jenkins/: Jenkinsfile
src/muscle_ai/: Send_data.py  ai_client.py  get_daily_workout.py  get_user.py  main.py  trainer.py  update_workout.py
src/muscle_ai/ai/: cleaner.py  client.py  generator.py  processing.py
src/muscle_ai/core/: config.py  utils.py
src/muscle_ai/supabase/: client.py  files.py  history.py  profiles.py  waiting_list.py  waiting_stats.py  workout_exercise.py  workouts.py
tests/: test_ai_client.py  test_daliy_workout.py  test_get_user.py  test_main.py  test_main_exit.py  test_save_firebase_json_mock.py  test_send_data.py  test_trainer.py  test_update_workout.py  test_user_firebase_mock.py  trainer_test.py
tests/test-mock/: test_save_firebase_json_mock.py  test_user_firebase_mock.py
tests/tests_ai/: test_client.py  test_generator.py  test_processing.py
tests/tests_core/: test_utils.py
tests/tests_supabase/: test_client.py  test_files.py  test_history.py  test_profiles.py  test_workout.py  test_workout_exercise.py
