[project]
name = "muscle-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "TobsBP",email = "tobias.bp2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requires (>=0.11.1,<0.12.0) ; python_version >= \"3.9\" and python_version < \"4.0\"",
    "google-genai (>=1.32.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "muscle_ai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
