[project]
name = "muscle-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "TobsBP",email = "tobias.bp2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requires (>=0.11.1,<0.12.0) ; python_version >= \"3.9\" and python_version < \"4.0\"",
    "google-genai (>=1.32.0,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "firebase-admin (>=7.1.0,<8.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "supabase (>=2.22.2,<3.0.0)"
]

[tool.poetry]
packages = [{include = "muscle_ai", from = "src"}]


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
mockito = "^1.5.4"
pytest-mock = "^3.14.1"
pytest-html = "^4.1.1"
pytest-cov = "^7.0.0"
pytest-sugar = "^1.1.1"


[tool.poetry.group.test.dependencies]
allure-pytest = "^2.15.0"
pytest-html = "^4.1.1"
pytest-metadata = "^3.1.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"